--- a/jonStyle.css
+++ b/jonStyle.css
@@ -47,24 +47,24 @@
   margin-bottom: 10px;
 }
 h1{
-    font-family: "block";
+    font-family: sans-serif;
     padding-top: 10px;
     padding-bottom: 0px;
     font-size: 50px;
     height: 80px;
 }
 h2{
+  font-family: sans-serif;
   padding-right: 5px;
   padding-top: 20px;
-  font-family: "block";
   font-size: 20px;
   width: 100%;
 }
 h3{
+  font-family: sans-serif;
   padding-bottom: 5px;
   padding-right: 5px;
   padding-top: 7px;
-  font-family: "block";
   font-size: 15px;
   width: 70%;
 }
@@ -72,8 +72,8 @@ h3:hover{
     background-color: #FFE135;
 }
 h4{
+    font-family: sans-serif;
     padding-top: 0px;
-    font-family: "block";
   }
 div{
   padding: 0px;
