--- a/jonStyle.css
+++ b/jonStyle.css
@@ -50,6 +50,7 @@ h1{
     font-family: sans-serif;
     padding-top: 10px;
     padding-bottom: 0px;
+    margin: 0px;
     font-size: 50px;
     height: 80px;
 }
