--- a/jonStyle.css
+++ b/jonStyle.css
@@ -40,6 +40,8 @@
   width: 75%;
   border-bottom: 3px solid  #6699CC;
   margin-bottom: 10px;
+  margin-top: 0px;
+  padding: 0px;
 }
 #line3{
   width: 75%;
