--- a/jonStyle.css
+++ b/jonStyle.css
@@ -68,7 +68,7 @@ h3{
   padding-bottom: 5px;
   padding-right: 5px;
   padding-top: 7px;
-  font-size: 15px;
+  font-size: 35px;
   width: 70%;
 }
 h3:hover{
@@ -86,7 +86,7 @@ div{
   padding-bottom: 5px;
   padding-right: 5px;
   padding-top: 7px;
-  font-size: 20px;
+  font-size: 23px;
 }
 .subInfo{
   font-family: sans-serif;
@@ -105,7 +105,7 @@ div{
   width: 250px;
   /*border: 2px solid black;*/
 }
-#exOne{
+/*#exOne{
    font-family: sans-serif;
   padding-bottom: 5px;
   padding-right: 5px;
@@ -128,4 +128,4 @@ div{
   padding-top: 7px;
   font-size: 15px;
   width: 70%;
-}
+}*/
